--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,6 +13,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        java: [1.8, 1.11]
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2.0.0
