Fixes https://github.com/IntellectualSites/PlotSquaredSuggestions/issues/110

--- a/Bukkit/src/main/resources/plugin.yml
+++ b/Bukkit/src/main/resources/plugin.yml
@@ -278,6 +278,8 @@ permissions:
     default: false
   plots.admin.command.trust:
     default: false
+  plots.admin.command.add:
+    default: false
   plots.admin.info.force:
     default: false
   plots.admin.command.schematic:
