--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -99,6 +99,18 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>com.intellectualsites.paster</groupId>
+      <artifactId>Paster</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>*</artifactId>
+          <groupId>*</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13</version>
