--- a/Bukkit/pom.xml
+++ b/Bukkit/pom.xml
@@ -183,6 +183,12 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>de.notmyfault</groupId>
+      <artifactId>serverlib</artifactId>
+      <version>1.0.0</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13</version>
