--- a/Bukkit/build.gradle
+++ b/Bukkit/build.gradle
@@ -110,6 +110,7 @@ shadowJar {
     relocate('com.sk89q.squirrelid', 'com.plotsquared.squirrelid')
     relocate('org.khelekore.prtree', 'com.plotsquared.prtree')
     relocate('com.intellectualsites.paster', 'com.plotsquared.core.paster')
+    relocate('de.notmyfault', 'com.plotsquared.bukkit')
     archiveFileName = "${project.name}-${parent.version}.jar"
     destinationDirectory = file "../target"
 }
