Fixes https://github.com/IntellectualSites/PlotSquaredSuggestions/issues/23

--- a/Bukkit/src/main/resources/plugin.yml
+++ b/Bukkit/src/main/resources/plugin.yml
@@ -286,6 +286,8 @@ permissions:
     default: false
   plots.admin.command.clear:
     default: false
+  plots.admin.flight:
+    default: false
 
   plots.teleport.delay.bypass:
     default: false
