--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,15 +6,15 @@ jobs:
   build:
     strategy:
       matrix:
-        java: ["1.8", "11"]
         os: ["ubuntu-18.04"]
     runs-on: "${{ matrix.os }}"
     steps:
       - name: "Checkout Repository"
         uses: "actions/checkout@v2.3.4"
-      - name: "Setup JDK ${{ matrix.java }}"
-        uses: "actions/setup-java@v1.4.3"
+      - name: "Setup JDK 16"
+        uses: "actions/setup-java@v2"
         with:
-          java-version: "${{ matrix.java }}"
+          distribution: "adopt"
+          java-version: "16"
       - name: "Clean Build"
         run: "./gradlew clean build"
