feat: re-add aggregated javadocs task
This was removed by IntellectualSites/PlotSquared#2922.
Closes IntellectualSites/PlotSquared#3037.

Signed-off-by: Mariell Hoversholm <proximyst@proximyst.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,7 @@ paster = "1.0.2-SNAPSHOT"
 
 bstats = "2.2.1"
 
+# Remember to update Paper javadoc version in the bukkit module!
 paper = "1.16.5-R0.1-SNAPSHOT"
 paperlib = "1.0.6"
 
