--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,15 +4,12 @@ on: ["pull_request", "push"]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os: ["ubuntu-18.04"]
-    runs-on: "${{ matrix.os }}"
+    runs-on: "ubuntu-20.04"
     steps:
       - name: "Checkout Repository"
         uses: "actions/checkout@v2.3.4"
       - name: "Setup JDK 16"
-        uses: "actions/setup-java@v2"
+        uses: "actions/setup-java@v2.1.0"
         with:
           distribution: "adopt"
           java-version: "16"
