Add TitleFlag - Allows players to set custom plot titles - Figured this would be the best implementation..? - `/plot flag set "a title" "the subtitle"` - Added it to list of flags to be sanitised for clickables just in case...

--- a/Bukkit/src/main/resources/plugin.yml
+++ b/Bukkit/src/main/resources/plugin.yml
@@ -359,6 +359,7 @@ permissions:
       plots.set.flag.forcefield.*: true
       plots.set.flag.price.*: true
       plots.set.flag.no-worldedit.*: true
+      plots.set.flag.titleflag.*: true
   plots.permpack.basicinbox:
     default: false
     children:
