--- a/Bukkit/src/main/resources/plugin.yml
+++ b/Bukkit/src/main/resources/plugin.yml
@@ -392,6 +392,7 @@ permissions:
       plots.set.flag.price: true
       plots.set.flag.no-worldedit: true
       plots.set.flag.no-worldedit.*: true
+      plots.set.flag.titleflag.*: true
   plots.permpack.basicinbox:
     default: false
     children:
