--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,9 @@ jobs:
       - name: "Checkout Repository"
         uses: "actions/checkout@v2.3.4"
       - name: "Setup JDK 16"
-        uses: "actions/setup-java@v2.1.0"
+        uses: "actions/setup-java@v2.2.0"
         with:
-          distribution: "adopt"
+          distribution: "temurin"
           java-version: "16"
       - name: "Clean Build"
         run: "./gradlew clean build"
