--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,8 +17,8 @@ adventure-text-minimessage = "4.1.0-SNAPSHOT"
 adventure-platform-bukkit = "4.0.0-SNAPSHOT"
 
 # Plugins
-worldedit = "7.2.6-SNAPSHOT"
-fawe = "1.17-155"
+worldedit = "7.2.6"
+fawe = "1.17-162"
 vault = "1.7"
 placeholderapi = "2.10.10"
 luckperms = "5.3"
