--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,20 +6,20 @@ log4j-api = "2.14.1" # Version set by Minecraft
 
 # Platform expectations
 paper = "1.17.1-R0.1-SNAPSHOT"
-checker-qual = "3.16.0"
+checker-qual = "3.18.0"
 guice = "5.0.1"
 findbugs = "3.0.1"
 snakeyaml = "1.28" # Version set by Bukkit
 
 # Adventure & MiniMessage
-adventure-api = "4.8.1"
+adventure-api = "4.9.0"
 adventure-text-minimessage = "4.1.0-SNAPSHOT"
 adventure-platform-bukkit = "4.0.0-SNAPSHOT"
 
 # Plugins
 worldedit = "7.2.6"
 fawe = "1.17-201"
-vault = "1.7"
+vault = "1.7.1"
 placeholderapi = "2.10.10"
 luckperms = "5.3"
 essentialsx = "2.18.2"
@@ -27,14 +27,14 @@ hyperverse = "0.6.0-SNAPSHOT"
 mvdwapi = "3.1.1"
 
 # Third party
-prtree = "1.7.0-SNAPSHOT"
+prtree = "1.5.0"
 aopalliance = "1.0"
 pipeline = "1.4.0-SNAPSHOT"
-arkitektonika = "2.0-SNAPSHOT"
-paster = "1.0.2-SNAPSHOT"
+arkitektonika = "2.1.0"
+paster = "1.1.1"
 bstats = "2.2.1"
 paperlib = "1.0.6"
-squirrelid = "1.0.0-SNAPSHOT"
+squirrelid = "0.3.0"
 serverlib = "2.2.1"
 http4j = "1.1-SNAPSHOT"
 
@@ -80,7 +80,7 @@ prtree = { group = "org.khelekore", name = "prtree", version.ref = "prtree" }
 aopalliance = { group = "aopalliance", name = "aopalliance", version.ref = "aopalliance" }
 pipeline = { group = "com.intellectualsites", name = "Pipeline", version.ref = "pipeline" }
 mvdwapi = { group = "be.maximvdw", name = "MVdWPlaceholderAPI", version.ref = "mvdwapi" }
-squirrelid = { group = "com.sk89q", name = "squirrelid", version.ref = "squirrelid" }
+squirrelid = { group = "org.enginehub", name = "squirrelid", version.ref = "squirrelid" }
 serverlib = { group = "org.incendo.serverlib", name = "ServerLib", version.ref = "serverlib" }
 bstats = { group = "org.bstats", name = "bstats-bukkit", version.ref = "bstats" }
 paperlib = { group = "io.papermc", name = "paperlib", version.ref = "paperlib" }
