--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,7 +35,7 @@ paster = "1.1.1"
 bstats = "2.2.1"
 paperlib = "1.0.6"
 squirrelid = "0.3.0"
-serverlib = "2.2.1"
+serverlib = "2.3.0"
 http4j = "1.3"
 
 # Gradle plugins
@@ -81,7 +81,7 @@ aopalliance = { group = "aopalliance", name = "aopalliance", version.ref = "aopa
 pipeline = { group = "com.intellectualsites", name = "Pipeline", version.ref = "pipeline" }
 mvdwapi = { group = "be.maximvdw", name = "MVdWPlaceholderAPI", version.ref = "mvdwapi" }
 squirrelid = { group = "org.enginehub", name = "squirrelid", version.ref = "squirrelid" }
-serverlib = { group = "org.incendo.serverlib", name = "ServerLib", version.ref = "serverlib" }
+serverlib = { group = "dev.notmyfault.serverlib", name = "ServerLib", version.ref = "serverlib" }
 bstats = { group = "org.bstats", name = "bstats-bukkit", version.ref = "bstats" }
 paperlib = { group = "io.papermc", name = "paperlib", version.ref = "paperlib" }
 arkitektonika = { group = "com.intellectualsites.arkitektonika", name = "Arkitektonika-Client", version.ref = "arkitektonika" }
