[ci skip] Adjust renovate config
Closes #3252

--- a/renovate.json
+++ b/renovate.json
@@ -7,5 +7,9 @@
     "guava",
     "gson",
     "snakeyaml"
+  ],
+  "timezone": "Europe/Berlin",
+  "schedule": [
+    "on monday after 9am"
   ]
 }
