--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: "build"
 
-on: ["pull_request", "push"]
+on: [ "pull_request", "push" ]
 
 jobs:
   build:
@@ -8,6 +8,8 @@ jobs:
     steps:
       - name: "Checkout Repository"
         uses: "actions/checkout@v2.3.4"
+      - name: "Validate Gradle Wrapper"
+        uses: "gradle/wrapper-validation-action@v1.0.4"
       - name: "Setup JDK 16"
         uses: "actions/setup-java@v2.2.0"
         with:
@@ -15,3 +17,25 @@ jobs:
           java-version: "16"
       - name: "Clean Build"
         run: "./gradlew clean build"
+      - name: "Determine release status"
+        if: "${{ runner.os == 'Linux' }}"
+        run: |
+          if [ "$(./gradlew properties | awk '/^version:/ { print $2; }' | grep '\-SNAPSHOT')" ]; then
+            echo "STATUS=snapshot" >> $GITHUB_ENV
+          else
+            echo "STATUS=release" >> $GITHUB_ENV
+          fi
+      - name: "Publish Release"
+        if: "${{ runner.os == 'Linux' && env.STATUS == 'release' && github.event_name == 'push' && github.ref == 'refs/heads/v6'}}"
+        run: "./gradlew publishToSonatype closeSonatypeStagingRepository"
+        env:
+          ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
+          ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
+          ORG_GRADLE_PROJECT_signingKey: "${{ secrets.SIGNING_KEY }}"
+          ORG_GRADLE_PROJECT_signingPassword: "${{ secrets.SIGNING_PASSWORD }}"
+      - name: "Publish Snapshot"
+        if: "${{ runner.os == 'Linux' && env.STATUS != 'release' && github.event_name == 'push' && github.ref == 'refs/heads/v6' }}"
+        run: "./gradlew publishToSonatype"
+        env:
+          ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
+          ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
