[ci skip] Move to work level templates

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,20 +1,1 @@
-categories:
-  - title: '🐛 Fixes'
-    label: 'Bugfix'
-  - title: '✨ Features'
-    label: 'Feature'
-  - title: '🧭 Changes'
-    label: 'Enhancement'
-  - title: '📦 Dependency updates'
-    labels:
-      - 'Renovate'
-      - 'Dependency updates'
-change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
-change-title-escapes: '\<*_&@'
-exclude-contributors:
-  - 'renovate'
-  - 'renovate-bot'
-template: |
-  ## PlotSquared v6.
-
-  $CHANGES
+_extends: .github
