--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,11 @@ jobs:
         uses: "actions/checkout@v2.3.4"
       - name: "Validate Gradle Wrapper"
         uses: "gradle/wrapper-validation-action@v1.0.4"
-      - name: "Setup JDK 16"
-        uses: "actions/setup-java@v2.2.0"
+      - name: "Setup Java"
+        uses: "actions/setup-java@v2.3.1"
         with:
           distribution: "temurin"
-          java-version: "16"
+          java-version: "17"
       - name: "Clean Build"
         run: "./gradlew clean build"
       - name: "Determine release status"
