--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,8 @@
   ],
   "ignoreDeps": [
     "guava",
-    "com.google.guava:guava",  
+    "com.google.guava:guava",
+    "com.google.code.gson:gson",
     "gson",
     "snakeyaml"
   ],
