build: Back to snapshot for development

--- a/renovate.json
+++ b/renovate.json
@@ -15,5 +15,5 @@
     "on monday after 9am"
   ],
   "labels": ["Renovate"],
-  "commitMessagePrefix": "chore: "
+  "commitMessagePrefix": "build: "
 }
