build: Update dependencies
Closes #3330

--- a/renovate.json
+++ b/renovate.json
@@ -15,5 +15,6 @@
     "on monday after 9am"
   ],
   "labels": ["Renovate"],
-  "commitMessagePrefix": "build: "
+  "commitMessagePrefix": "build: ",
+  "rebaseWhen": "conflicted"
 }
