--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,10 @@
 [versions]
 # Minecraft expectations
-guava = "21.0" # Version set by Minecraft
-gson = "2.8.0" # Version set by Minecraft
+gson = "2.8.8" # Version set by Minecraft
 log4j-api = "2.14.1" # Version set by Minecraft
 
 # Platform expectations
-paper = "1.17.1-R0.1-SNAPSHOT"
+paper = "1.18-R0.1-SNAPSHOT"
 checker-qual = "3.19.0"
 guice = "5.0.1"
 findbugs = "3.0.1"
@@ -18,11 +17,11 @@ adventure-platform-bukkit = "4.0.0"
 
 # Plugins
 worldedit = "7.2.7"
-fawe = "1.17-397"
+fawe = "1.17-410"
 vault = "1.7.1"
 placeholderapi = "2.10.10"
 luckperms = "5.3"
-essentialsx = "2.18.2"
+essentialsx = "2.19.0"
 hyperverse = "0.6.0-SNAPSHOT"
 mvdwapi = "3.1.1"
 
@@ -40,7 +39,7 @@ http4j = "1.3"
 
 # Gradle plugins
 shadow = "7.1.0"
-grgit = "4.1.0"
+grgit = "4.1.1"
 licenser = "0.6.1"
 nexus = "1.1.0"
 
@@ -50,7 +49,6 @@ paper = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper" 
 checkerqual = { group = "org.checkerframework", name = "checker-qual", version.ref = "checker-qual" }
 
 # Minecraft expectations
-guava = { group = "com.google.guava", name = "guava", version.ref = "guava" }
 gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 log4j = { group = "org.apache.logging.log4j", name = "log4j-api", version.ref = "log4j-api" }
 
@@ -73,7 +71,7 @@ fastasyncworldeditCore = { group = "com.fastasyncworldedit", name = "FastAsyncWo
 vault = { group = "com.github.MilkBowl", name = "VaultAPI", version.ref = "vault" }
 placeholderapi = { group = "me.clip", name = "placeholderapi", version.ref = "placeholderapi" }
 luckperms = { group = "net.luckperms", name = "api", version.ref = "luckperms" }
-essentialsx = { group = "net.ess3", name = "EssentialsX", version.ref = "essentialsx" }
+essentialsx = { group = "net.essentialsx", name = "EssentialsX", version.ref = "essentialsx" }
 hyperverse = { group = "se.hyperver.hyperverse", name = "Core", version.ref = "hyperverse" }
 
 # Third party
