build: Update pipeline version to release build

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 # Minecraft expectations
 gson = "2.8.0" # Version set by Minecraft
 log4j-api = "2.14.1" # Version set by Minecraft
+guava = "21.0" # Version set by Minecraft
 
 # Platform expectations
 paper = "1.17.1-R0.1-SNAPSHOT"
@@ -28,7 +29,7 @@ mvdwapi = "3.1.1"
 # Third party
 prtree = "2.0.0"
 aopalliance = "1.0"
-pipeline = "1.4.0-SNAPSHOT"
+rorledning = "1.5.0"
 arkitektonika = "2.1.0"
 paster = "1.1.1"
 bstats = "2.2.1"
@@ -77,7 +78,7 @@ hyperverse = { group = "se.hyperver.hyperverse", name = "Core", version.ref = "h
 # Third party
 prtree = { group = "com.intellectualsites.prtree", name = "PRTree", version.ref = "prtree" }
 aopalliance = { group = "aopalliance", name = "aopalliance", version.ref = "aopalliance" }
-pipeline = { group = "com.intellectualsites", name = "Pipeline", version.ref = "pipeline" }
+rorledning = { group = "com.intellectualsites.rorledning", name = "Rorledning", version.ref = "rorledning" }
 mvdwapi = { group = "be.maximvdw", name = "MVdWPlaceholderAPI", version.ref = "mvdwapi" }
 squirrelid = { group = "org.enginehub", name = "squirrelid", version.ref = "squirrelid" }
 serverlib = { group = "dev.notmyfault.serverlib", name = "ServerLib", version.ref = "serverlib" }
@@ -86,6 +87,7 @@ paperlib = { group = "io.papermc", name = "paperlib", version.ref = "paperlib" }
 arkitektonika = { group = "com.intellectualsites.arkitektonika", name = "Arkitektonika-Client", version.ref = "arkitektonika" }
 http4j = { group = "com.intellectualsites.http", name = "HTTP4J", version.ref = "http4j" }
 paster = { group = "com.intellectualsites.paster", name = "Paster", version.ref = "paster" }
+guava = { group = "com.google.guava", name = "guava", version.ref = "guava" }
 
 [plugins]
 shadow = { id = "com.github.johnrengelman.shadow", version.ref = "shadow" }
