style: Address style issues from previous commit

--- a/renovate.json
+++ b/renovate.json
@@ -14,7 +14,9 @@
   "schedule": [
     "on monday after 9am"
   ],
-  "labels": ["Renovate"],
+  "labels": [
+    "Renovate"
+  ],
   "commitMessagePrefix": "build: ",
   "rebaseWhen": "conflicted"
 }
