--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,41 +1,41 @@
-name: "build"
+name: build
 
-on: [ "pull_request", "push" ]
+on: [ pull_request, push ]
 
 jobs:
   build:
-    runs-on: "ubuntu-20.04"
+    runs-on: ubuntu-latest
     steps:
-      - name: "Checkout Repository"
-        uses: "actions/checkout@v2.4.0"
-      - name: "Validate Gradle Wrapper"
-        uses: "gradle/wrapper-validation-action@v1.0.4"
-      - name: "Setup Java"
-        uses: "actions/setup-java@v2.4.0"
+      - name: Checkout Repository
+        uses: actions/checkout@v2.3.5
+      - name: Validate Gradle Wrapper"
+        uses: gradle/wrapper-validation-action@v1.0.4
+      - name: Setup Java
+        uses: actions/setup-java@v2.4.0
         with:
-          distribution: "temurin"
-          java-version: "17"
-      - name: "Clean Build"
-        run: "./gradlew clean build"
-      - name: "Determine release status"
-        if: "${{ runner.os == 'Linux' }}"
+          distribution: temurin
+          java-version: 17
+      - name: Clean Build
+        run: ./gradlew clean build
+      - name: Determine release status
+        if: ${{ runner.os == 'Linux' }}
         run: |
           if [ "$(./gradlew properties | awk '/^version:/ { print $2; }' | grep '\-SNAPSHOT')" ]; then
             echo "STATUS=snapshot" >> $GITHUB_ENV
           else
             echo "STATUS=release" >> $GITHUB_ENV
           fi
-      - name: "Publish Release"
-        if: "${{ runner.os == 'Linux' && env.STATUS == 'release' && github.event_name == 'push' && github.ref == 'refs/heads/v6'}}"
-        run: "./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository"
+      - name: Publish Release
+        if: ${{ runner.os == 'Linux' && env.STATUS == 'release' && github.event_name == 'push' && github.ref == 'refs/heads/v6'}}
+        run: ./gradlew publishToSonatype closeAndReleaseSonatypeStagingRepository
         env:
-          ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
-          ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
-          ORG_GRADLE_PROJECT_signingKey: "${{ secrets.SIGNING_KEY }}"
-          ORG_GRADLE_PROJECT_signingPassword: "${{ secrets.SIGNING_PASSWORD }}"
-      - name: "Publish Snapshot"
-        if: "${{ runner.os == 'Linux' && env.STATUS != 'release' && github.event_name == 'push' && github.ref == 'refs/heads/v6' }}"
-        run: "./gradlew publishToSonatype"
+          ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONATYPE_USERNAME }}
+          ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.SIGNING_KEY }}
+          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.SIGNING_PASSWORD }}
+      - name: Publish Snapshot
+        if: ${{ runner.os == 'Linux' && env.STATUS != 'release' && github.event_name == 'push' && github.ref == 'refs/heads/v6' }}
+        run: ./gradlew publishToSonatype
         env:
-          ORG_GRADLE_PROJECT_sonatypeUsername: "${{ secrets.SONATYPE_USERNAME }}"
-          ORG_GRADLE_PROJECT_sonatypePassword: "${{ secrets.SONATYPE_PASSWORD }}"
+          ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.SONATYPE_USERNAME }}
+          ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.SONATYPE_PASSWORD }}
