--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 # Minecraft expectations
-gson = "2.8.0" # Version set by Minecraft
-log4j-api = "2.16.0" # Version set by Minecraft
-guava = "21.0" # Version set by Minecraft
+gson = "2.8.9" # Version set by Minecraft
+log4j-api = "2.17.0" # Version set by Minecraft
+guava = "31.0.1-jre" # Version set by Minecraft
 
 # Platform expectations
-paper = "1.17.1-R0.1-SNAPSHOT"
+paper = "1.18.1-R0.1-SNAPSHOT"
 checker-qual = "3.20.0"
 guice = "5.0.1"
 findbugs = "3.0.1"
-snakeyaml = "1.28" # Version set by Bukkit
+snakeyaml = "1.30" # Version set by Bukkit
 
 # Adventure & MiniMessage
 adventure-api = "4.9.3"
@@ -39,7 +39,7 @@ serverlib = "2.3.1"
 http4j = "1.3"
 
 # Gradle plugins
-shadow = "7.1.0"
+shadow = "7.1.1"
 grgit = "4.1.1"
 licenser = "0.6.1"
 nexus = "1.1.0"
