Refactor: Replace Rörledning with Cloud-Services
Cloud-Services is actually maintained, as opposed to Rörledning. Furthermore, Rörledning is available through Maven Central, whereas rörledning isn't.

This is a semi-breaking change, but because we relocate, it might be fine? Either way, this is a necessary change.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ adventure-platform-bukkit = "4.0.1"
 
 # Plugins
 worldedit = "7.2.8"
-fawe = "1.17-419"
+fawe = "2.0.0-SNAPSHOT"
 vault = "1.7.1"
 placeholderapi = "2.11.1"
 luckperms = "5.3"
@@ -29,7 +29,7 @@ mvdwapi = "3.1.1"
 # Third party
 prtree = "2.0.0"
 aopalliance = "1.0"
-rorledning = "1.4.0-SNAPSHOT"
+cloud-services = "1.6.0"
 arkitektonika = "2.1.1"
 paster = "1.1.3"
 bstats = "2.2.1"
@@ -78,7 +78,7 @@ hyperverse = { group = "se.hyperver.hyperverse", name = "Core", version.ref = "h
 # Third party
 prtree = { group = "com.intellectualsites.prtree", name = "PRTree", version.ref = "prtree" }
 aopalliance = { group = "aopalliance", name = "aopalliance", version.ref = "aopalliance" }
-rorledning = { group = "com.intellectualsites", name = "Pipeline", version.ref = "rorledning" }
+cloudServices = { group = "cloud.commandframework", name = "cloud-services", version.ref = "cloud-services" }
 mvdwapi = { group = "be.maximvdw", name = "MVdWPlaceholderAPI", version.ref = "mvdwapi" }
 squirrelid = { group = "org.enginehub", name = "squirrelid", version.ref = "squirrelid" }
 serverlib = { group = "dev.notmyfault.serverlib", name = "ServerLib", version.ref = "serverlib" }
