--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ adventure-platform-bukkit = "4.0.1"
 
 # Plugins
 worldedit = "7.2.8"
-fawe = "2.0.0-SNAPSHOT"
+fawe = "2.0.0"
 vault = "1.7.1"
 placeholderapi = "2.11.1"
 luckperms = "5.3"
